bumped to v2.0.1, various fixes